--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "html-webpack-plugin": "^2.30.1",
     "nodemon": "^1.12.1",
     "parallelshell": "^3.0.2",
+    "react-devtools": "^3.0.0",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4"
   }
