--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/katm201/hrsf83-mvp#readme",
   "dependencies": {
+    "axios": "^0.17.0",
     "express": "^4.16.2",
     "react": "^16.1.0",
     "react-dom": "^16.1.0"
