Add body-parser middleware to handle incoming POST requests

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/katm201/hrsf83-mvp#readme",
   "dependencies": {
     "axios": "^0.17.0",
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "react": "^16.1.0",
     "react-dom": "^16.1.0"
