--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "body-parser": "^1.18.2",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "mongoose": "^4.13.1",
     "react": "^16.1.0",
     "react-dom": "^16.1.0"
   },
