--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "axios": "^0.17.0",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "css-loader": "^0.28.7",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "mongoose": "^4.13.1",
     "react": "^16.1.0",
-    "react-dom": "^16.1.0"
+    "react-dom": "^16.1.0",
+    "style-loader": "^0.19.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
