--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mongoose": "^4.13.1",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
+    "react-twitter-widgets": "^1.7.1",
     "style-loader": "^0.19.0"
   },
   "devDependencies": {
