--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
     "react-twitter-widgets": "^1.7.1",
-    "style-loader": "^0.19.0"
+    "style-loader": "^0.19.0",
+    "twitter-node-client": "0.0.6"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
